Simplify sum() expressions

--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -193,24 +193,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "KUTwafbeVsCC",
-        "outputId": "e66aeeb6-65a6-4121-912b-7e9aae9298e7"
+        "outputId": "79453137-f075-4ffc-b7a7-8f7480fb0075"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "4273224"
             ]
           },
-          "execution_count": 4,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 6
         }
       ],
       "source": [
@@ -228,7 +228,7 @@
         "  def filter(ms, bit):\n",
         "    half = len(ms)/2\n",
         "    # count 1s in bit position\n",
-        "    count1s = sum([int(m[bit]) for m in ms])\n",
+        "    count1s = sum(int(m[bit]) for m in ms)\n",
         "    # filter according to count1s and filtermode\n",
         "    filterval = filtermode if count1s > half else (1-filtermode if count1s < half else filtermode)\n",
         "    return [m for m in ms if int(m[bit]) == filterval]\n",
@@ -253,18 +253,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 7,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "JP5HBO3T3jZr",
-        "outputId": "5896c622-ab40-4b99-9fee-e28d840d9190"
+        "outputId": "2c416c03-f856-41ec-a6f7-b553353ee39a"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "First board\n",
             "[[6, 0], [26, 0], [69, 1], [27, 1], [75, 0]]\n",
@@ -317,7 +317,7 @@
         "\n",
         "def rowbingo(board) -> bool:\n",
         "  # bool(list) is True if non-empty, i. e. 5 marked numbers in at least 1 row\n",
-        "  return bool([row for row in board if sum([n[1] for n in row]) == 5])  \n",
+        "  return bool([row for row in board if sum(n[1] for n in row) == 5])  \n",
         "\n",
         "def colbingo(board) -> bool:\n",
         "  # The reduce counts marked numbers (row[i][1] == 1) in all columns (i=0..4)\n",
@@ -328,7 +328,7 @@
         "  return rowbingo(board) or colbingo(board)\n",
         "\n",
         "def sum_unmarked(board) -> int:\n",
-        "  return sum([sum([n[0] for n in row if n[1] == 0]) for row in board])\n",
+        "  return sum(sum(n[0] for n in row if n[1] == 0) for row in board)\n",
         "\n",
         "def p(board):\n",
         "  for row in board:\n",
@@ -382,18 +382,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 11,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Xg0ly6Ku2O2W",
-        "outputId": "42cda9e8-2ca9-4f3b-fefe-6052baa607d9"
+        "outputId": "ca6dcb52-8986-4d69-82cb-ada8cd7dca77"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "number of points where lines overlap: 22083\n"
           ]
@@ -434,7 +434,7 @@
         "  m = re.fullmatch(r\"(\\d+),(\\d+) -> (\\d+),(\\d+)\\n\", l)\n",
         "  add_line(*[int(m.group(i)) for i in [1, 2, 3, 4]])\n",
         "\n",
-        "print(f\"number of points where lines overlap: {sum([1 if grid[k] > 1 else 0 for k in grid.keys()])}\")"
+        "print(f\"number of points where lines overlap: {sum(1 if grid[k] > 1 else 0 for k in grid.keys())}\")"
       ]
     },
     {
@@ -448,18 +448,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "SKBCm2R-imKk",
-        "outputId": "89f746b2-c3b4-4c3d-a7a7-c0f54bf107a8"
+        "outputId": "ed46d0f4-1aed-4f23-e37b-3bb68deb368e"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "80: 380612\n"
           ]
@@ -471,7 +471,7 @@
         "iterations = 80\n",
         "for i in range(0, iterations):\n",
         "  # print(f\"{i}: {len(population)}\")\n",
-        "  new_timers = [8] * sum([1 if timer == 0 else 0 for timer in population])\n",
+        "  new_timers = [8] * sum(1 if timer == 0 else 0 for timer in population)\n",
         "  population = [6 if timer == 0 else timer-1 for timer in population]\n",
         "  population += new_timers\n",
         "\n",
@@ -524,22 +524,22 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 10,
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 131
         },
         "id": "zzL9RSGA84Ub",
-        "outputId": "2dbfcc7d-eed7-4423-d8e0-595c2f44de9e"
+        "outputId": "680f691c-e974-422d-ba9e-8db2ba6d2578"
       },
       "outputs": [
         {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "estimation(part 1): 243.2525\n",
-            "part 1: (347, 347449)\n",
-            "part 2: (486, 98039527)\n"
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-10-08e946669f33>\"\u001b[0;36m, line \u001b[0;32m11\u001b[0m\n\u001b[0;31m    print(\"part 1:\", min((i, consumption1(i, positions)) for i in range(0, len(positions)), key=lambda t: t[1]))\u001b[0m\n\u001b[0m                        ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m Generator expression must be parenthesized\n"
           ]
         }
       ],
@@ -549,10 +549,10 @@
         "print(f\"estimation(part 1): {sum(positions)/len(positions)/2}\")\n",
         "\n",
         "def consumption1(target, current):\n",
-        "  return sum([abs(target - curr) for curr in current])\n",
+        "  return sum(abs(target - curr) for curr in current)\n",
         "\n",
         "def consumption2(target, current):\n",
-        "  return sum([int(abs(target-curr)*(abs(target-curr)+1)/2) for curr in current])\n",
+        "  return sum(int(abs(target-curr)*(abs(target-curr)+1)/2) for curr in current)\n",
         "\n",
         "print(\"part 1:\", min([(i, consumption1(i, positions)) for i in range(0, len(positions))], key=lambda t: t[1]))\n",
         "print(\"part 2:\", min([(i, consumption2(i, positions)) for i in range(0, len(positions))], key=lambda t: t[1]))\n",
@@ -570,18 +570,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 16,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "VSIcdkV88Z3A",
-        "outputId": "211c2fc7-c5e0-4c51-abf1-2da812dab1c0"
+        "outputId": "57746d41-ec9b-40a1-ab95-0fcf695a5f70"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "part 1: 539\n",
             "part 2: 1084606\n"
@@ -599,7 +599,7 @@
         "# segment counts by digit\n",
         "sc = dict((i, len(s)) for i, s in enumerate(segments))\n",
         "\n",
-        "print(\"part 1:\", sum([1 if len(o) in [sc[1], sc[4], sc[7], sc[8]] else 0 for po in patterns_and_output for o in po['output']]))\n",
+        "print(\"part 1:\", sum(1 if len(o) in [sc[1], sc[4], sc[7], sc[8]] else 0 for po in patterns_and_output for o in po['output']))\n",
         "\n",
         "\n",
         "# 2 find wiring from patterns, then translate/sort output to find the digits\n",
@@ -643,7 +643,7 @@
         "    return \"\".join(set(s1+s2))\n",
         "\n",
         "  def chars_in(s1:str, s2:str) -> bool:\n",
-        "    return sum([1 if c in s2 else 0 for c in s1]) == len(s1)\n",
+        "    return sum(1 if c in s2 else 0 for c in s1) == len(s1)\n",
         "\n",
         "  # one of many possible ways of deducting the mapping of the segment codes used in output to the correct segments\n",
         "  \n",
@@ -670,7 +670,7 @@
         "  seg_e = s_diff(seg_eg, seg_g)\n",
         "  mapping[seg_e] = 'e'\n",
         "  # 9 f = \"6\" / len 6 which has only one of the segments of \"1\" (cf) - segments a,b,d,e,g\n",
-        "  seg_f = reduce(lambda p, seg: sdiff(p, seg), \n",
+        "  seg_f = reduce(lambda p, seg: s_diff(p, seg), \n",
         "                 [seg_a, seg_b, seg_d, seg_e, seg_g], \n",
         "                 [p for p in len6_069 if len(s_inter(p, len2_1_cf)) == 1][0])\n",
         "  mapping[seg_f] = 'f'\n",
@@ -693,7 +693,7 @@
         "res = 0\n",
         "for po in patterns_and_output:\n",
         "  mapping = decode(po['patterns'])\n",
-        "  decoded_output = sum([digits[s_sort(translate(output, mapping))] * pow(10, i) for i, output in enumerate(reversed(po['output']))])\n",
+        "  decoded_output = sum(digits[s_sort(translate(output, mapping))] * pow(10, i) for i, output in enumerate(reversed(po['output'])))\n",
         "  # print(decoded_output)\n",
         "  res += decoded_output\n",
         "\n",
@@ -711,18 +711,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "1qN4FtKCM4aD",
-        "outputId": "db4b9d17-a955-4ce6-969f-385b832d9706"
+        "outputId": "c4d82215-7dba-4846-8f74-d88583dadd69"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "part 1: 456\n",
             "part 2 (mutable): 1047744\n",
@@ -762,7 +762,7 @@
         "      if len([p for p in neighbors((x, y)) if height(p) > height((x, y))]) == len(neighbors((x, y)))]\n",
         "\n",
         "print(\"part 1:\",\n",
-        "  sum([height(p) + 1 for p in low_points]))\n",
+        "  sum(height(p) + 1 for p in low_points))\n",
         "\n",
         "# part 2 - basins, using mutable sets\n",
         "\n",
@@ -805,18 +805,18 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "B1XxUnf7rujv",
-        "outputId": "a49d1b31-83bf-4155-bc1d-4d94c7eb2798"
+        "outputId": "c9fb97d2-1573-43fd-f6ba-5c30714a1da4"
       },
       "outputs": [
         {
-          "name": "stdout",
           "output_type": "stream",
+          "name": "stdout",
           "text": [
             "part 1: 290691\n",
             "part 2: 2768166558\n"
@@ -849,7 +849,7 @@
         "        return ch\n",
         "  return None\n",
         "\n",
-        "print(\"part 1:\", sum([illegal_scores[il] if il is not None else 0 for il in [find_illegal_char(line) for line in lines]]))\n",
+        "print(\"part 1:\", sum(illegal_scores[il] if il is not None else 0 for il in [find_illegal_char(line) for line in lines]))\n",
         "\n",
         "# 2 - discard corrupted lines, complete the remaining lines and score each line for completion chars\n",
         "\n",
@@ -888,13 +888,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "Ky5EoCfnvjY8",
-        "outputId": "51e2d2e4-22de-4a70-949a-b2d69e6ac1af"
+        "outputId": "7b20e213-2656-47a0-aaa3-1e50d291f747"
       },
       "outputs": [
         {
@@ -985,7 +985,7 @@
         "\n",
         "# part 2 - when do all octopuses flash simultaneously\n",
         "steps = 100  # from part 1\n",
-        "while sum([sum(row) for row in grid]) > 0:\n",
+        "while sum(sum(row) for row in grid) > 0:\n",
         "  steps += 1\n",
         "  step()\n",
         "\n",
@@ -1058,7 +1058,7 @@
         "\n",
         "# part 2 - when do all octopuses flash simultaneously\n",
         "steps = 100  # from part 1\n",
-        "while sum([sum(row) for row in g]) > 0:\n",
+        "while sum(sum(row) for row in g) > 0:\n",
         "  steps += 1\n",
         "  g, f = step((g, f))\n",
         "\n",
@@ -1099,15 +1099,16 @@
         "\n",
         "def walk1(node, path):\n",
         "  # if node == 'end': print(path+[node])\n",
-        "  return 1 if node=='end' else sum([walk1(n, path+[node]) for n in graph[node] if is_large(n) or n not in path])\n",
+        "  return 1 if node=='end' else sum(walk1(n, path+[node]) for n in graph[node] if is_large(n) or n not in path)\n",
         "\n",
         "print('part 1:', walk1('start', []))\n",
         "\n",
         "def walk2(node, small_twice, path):\n",
         "  # if node == 'end': print(path+[node])\n",
-        "  return 1 if node=='end' else sum([walk2(n, n if is_small(n) and n in path else small_twice, path+[node]) \\\n",
-        "              for n in graph[node] \\\n",
-        "              if is_large(n) or n not in path or (small_twice is None and n != 'start')])\n",
+        "  return 1 if node=='end' \\\n",
+        "           else sum(walk2(n, n if is_small(n) and n in path else small_twice, path+[node]) \\\n",
+        "                    for n in graph[node] \\\n",
+        "                    if is_large(n) or n not in path or (small_twice is None and n != 'start'))\n",
         "\n",
         "print('part 2:', walk2('start', None, []))"
       ],
@@ -1116,9 +1117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sALg6TtIw8l0",
-        "outputId": "6a59bd5a-fad2-4dcb-eb8c-2dae7c005d20"
+        "outputId": "707ca075-d37c-4fdd-ed2d-2ee3c5c3f519"
       },
-      "execution_count": 7,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -1137,7 +1138,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyNGun8ynNmZCB82O6NmdPmK",
+      "authorship_tag": "ABX9TyOmW/FCGUD2XffhkskIPjcP",
       "include_colab_link": true
     },
     "kernelspec": {
