Functional graph parsing

--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1080,16 +1080,16 @@
       "cell_type": "code",
       "source": [
         "import re\n",
+        "from functools import reduce\n",
         "\n",
-        "def merge(dict1, dict2):\n",
-        "  return {**dict1, **dict2}\n",
+        "# graph = dict(node -> adjacent nodes) (nodes = caves)\n",
         "\n",
-        "# node -> adjacent nodes (caves)\n",
-        "graph = {}\n",
-        "for n1, n2 in [re.fullmatch('([a-zA-Z]+)-([a-zA-Z]+)', line.strip()).groups() for line in open('drive/MyDrive/AoC/2021/input12.txt')]:\n",
-        "  graph = merge(graph, {\n",
-        "      n1: graph.get(n1, []) + [n2], \n",
-        "      n2: graph.get(n2, []) + [n1]})\n",
+        "# adds an edge to a graph by merging adjacent nodes for both nodes of given edge \n",
+        "def add_edge(adj:dict, edge:tuple) -> dict:\n",
+        "  n1, n2 = edge\n",
+        "  return {**adj, **{n1: adj.get(n1, []) + [n2], n2: adj.get(n2, []) + [n1]}}  # functional merge of two dicts\n",
+        "\n",
+        "graph = reduce(add_edge, [re.fullmatch('([a-zA-Z]+)-([a-zA-Z]+)', line.strip()).groups() for line in open('drive/MyDrive/AoC/2021/input12.txt')], {})\n",
         "\n",
         "def is_small(node):\n",
         "  return node[0].islower()\n",
@@ -1117,9 +1117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sALg6TtIw8l0",
-        "outputId": "707ca075-d37c-4fdd-ed2d-2ee3c5c3f519"
+        "outputId": "fbceb20b-0ea7-4d35-be51-7f11be1e5c70"
       },
-      "execution_count": 3,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1138,7 +1138,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyOmW/FCGUD2XffhkskIPjcP",
+      "authorship_tag": "ABX9TyMPp2xndxESWOKfr51e/9Cq",
       "include_colab_link": true
     },
     "kernelspec": {
