--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -193,7 +193,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -253,7 +253,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -382,7 +382,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -448,7 +448,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -524,7 +524,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -570,7 +570,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -711,7 +711,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -805,7 +805,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -888,7 +888,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -1089,7 +1089,10 @@
         "  n1, n2 = edge\n",
         "  return {**adj, **{n1: adj.get(n1, []) + [n2], n2: adj.get(n2, []) + [n1]}}  # functional merge of two dicts\n",
         "\n",
-        "graph = reduce(add_edge, [re.fullmatch('([a-zA-Z]+)-([a-zA-Z]+)', line.strip()).groups() for line in open('drive/MyDrive/AoC/2021/input12.txt')], {})\n",
+        "graph = reduce(add_edge, \n",
+        "               [re.fullmatch('([a-zA-Z]+)-([a-zA-Z]+)', line.strip()).groups() \\\n",
+        "                for line in open('drive/MyDrive/AoC/2021/input12.txt')], \n",
+        "               {})\n",
         "\n",
         "def is_small(node):\n",
         "  return node[0].islower()\n",
@@ -1097,7 +1100,7 @@
         "def is_large(node):\n",
         "  return node[0].isupper()\n",
         "\n",
-        "def walk1(node, path):\n",
+        "def f(node, path):\n",
         "  # if node == 'end': print(path+[node])\n",
         "  return 1 if node=='end' else sum(walk1(n, path+[node]) for n in graph[node] if is_large(n) or n not in path)\n",
         "\n",
@@ -1117,9 +1120,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sALg6TtIw8l0",
-        "outputId": "fbceb20b-0ea7-4d35-be51-7f11be1e5c70"
+        "outputId": "0782c64e-efae-4d0d-c096-1e9030440857"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1127,6 +1130,72 @@
           "text": [
             "part 1: 4186\n",
             "part 2: 92111\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "13) Folding transparent paper"
+      ],
+      "metadata": {
+        "id": "kjQm1RPWnnxJ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import re\n",
+        "from functools import reduce\n",
+        "\n",
+        "dots = set([tuple([int(s) for s in line.strip().split(',')]) for line in open('drive/MyDrive/AoC/2021/input13.txt') if re.match('^\\d', line)])\n",
+        "folds = [re.fullmatch('fold along ([xy])=(\\d+)', line.strip()).groups() for line in open('drive/MyDrive/AoC/2021/input13.txt') if line.startswith('fold')]\n",
+        "print(\"dots :\", len(dots))\n",
+        "print(\"folds:\", folds)\n",
+        "\n",
+        "def fold(dots, f):\n",
+        "  axis, s = f\n",
+        "  v = int(s)\n",
+        "  return set([(x, y) if x < v else (2*v-x, y) for x, y in dots]) if axis == 'x' else set([(x, y) if y < v else (x, 2*v-y) for x, y in dots])\n",
+        "\n",
+        "print('part 1:', len(fold(dots, folds[0])))\n",
+        "\n",
+        "def p(code):\n",
+        "  code_size = reduce(lambda m, dot: (max(dot[0], m[0]), max(dot[1], m[1])), code, (0, 0))\n",
+        "  print(\"code size:\", code_size)\n",
+        "  for y in range(0, code_size[1]+1):\n",
+        "    print(\"\".join(['#' if (x, y) in code else ' ' for x in range(0, code_size[0]+1)]))\n",
+        "\n",
+        "code = reduce(fold, folds, dots)\n",
+        "\n",
+        "print('part 2:')\n",
+        "p(code)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1DejvypDnsUn",
+        "outputId": "d4aada6c-92bc-4f63-cfc3-e105d639418f"
+      },
+      "execution_count": 27,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "dots : 903\n",
+            "folds: [('x', '655'), ('y', '447'), ('x', '327'), ('y', '223'), ('x', '163'), ('y', '111'), ('x', '81'), ('y', '55'), ('x', '40'), ('y', '27'), ('y', '13'), ('y', '6')]\n",
+            "part 1: 753\n",
+            "part 2:\n",
+            "code size: (38, 5)\n",
+            "#  # #### #    #### #  #   ## ###  #  #\n",
+            "#  #    # #    #    #  #    # #  # # # \n",
+            "####   #  #    ###  ####    # #  # ##  \n",
+            "#  #  #   #    #    #  #    # ###  # # \n",
+            "#  # #    #    #    #  # #  # # #  # # \n",
+            "#  # #### #### #### #  #  ##  #  # #  #\n"
           ]
         }
       ]
@@ -1138,7 +1207,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyMPp2xndxESWOKfr51e/9Cq",
+      "authorship_tag": "ABX9TyOMIkxt3cHucxTaofPzQfCV",
       "include_colab_link": true
     },
     "kernelspec": {
