--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1100,7 +1100,7 @@
         "def is_large(node):\n",
         "  return node[0].isupper()\n",
         "\n",
-        "def f(node, path):\n",
+        "def walk1(node, path):\n",
         "  # if node == 'end': print(path+[node])\n",
         "  return 1 if node=='end' else sum(walk1(n, path+[node]) for n in graph[node] if is_large(n) or n not in path)\n",
         "\n",
@@ -1120,9 +1120,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "sALg6TtIw8l0",
-        "outputId": "0782c64e-efae-4d0d-c096-1e9030440857"
+        "outputId": "72e3abe7-083f-447d-ee23-b97580b6ad53"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -1177,9 +1177,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1DejvypDnsUn",
-        "outputId": "d4aada6c-92bc-4f63-cfc3-e105d639418f"
+        "outputId": "86419915-616f-4460-a340-f5eb66e1c45a"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -1285,6 +1285,107 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "15) shortest (lowest weight) path search"
+      ],
+      "metadata": {
+        "id": "mN0I2r7LJE7k"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# dijkstra shortest path from (0, 0) to target node\n",
+        "# we have a fully connected graph here consisting of h * w nodes where there are edges to 2-4 neighbors (2 in the corners, 3 at the borders, 4 in the middle).\n",
+        "# The node values can be viewed as distance from any of its neighbors\n",
+        "\n",
+        "def dijkstra_dist(nodes, w1, h1, rep, goal):\n",
+        "  \n",
+        "  h = h1 * rep\n",
+        "  w = w1 * rep\n",
+        "  num_nodes = h * w\n",
+        "    \n",
+        "  # should be memoized ;)\n",
+        "  def neighbors(p) -> list:\n",
+        "    x, y = p\n",
+        "    return [(x, y)\n",
+        "            for x, y in [(x+1,y), (x,y+1), (x-1,y), (x,y-1)]\n",
+        "                if x in range(0, w) and x in range(0, h)]\n",
+        "\n",
+        "  # init\n",
+        "  distances = {(0, 0): 0}  # point -> distance , default interpreted as infinite\n",
+        "  predecessors = {}  # point -> point , default interpreted as none\n",
+        "  nodes_to_visit = set([(x, y) for y in range(0, h) for x in range(0, w)])\n",
+        "  \n",
+        "  def risk(v):\n",
+        "    x, y = v\n",
+        "    dy = int(y/h1)\n",
+        "    dx = int(x/w1)\n",
+        "    diff = dx + dy\n",
+        "    return (nodes[(x-dx*w1, y-dy*w1)] + diff - 1) % 9 + 1\n",
+        "\n",
+        "  def dist_update(u, v, dists, preds, m):\n",
+        "    alt = dists.get(u) + risk(v)\n",
+        "    if alt < dists.get(v, 999999):\n",
+        "      dists[v] = alt\n",
+        "      preds[v] = u\n",
+        "    m[0]  \n",
+        "\n",
+        "  while nodes_to_visit: # not empty\n",
+        "    if (len(nodes_to_visit) % 1000 == 0):\n",
+        "      print(len(nodes_to_visit))\n",
+        "    u = min(distances.items(), key=lambda d: d[1] if d[0] in nodes_to_visit else 999999)[0] \\\n",
+        "      if len(nodes_to_visit) > num_nodes/2 \\\n",
+        "      else min(nodes_to_visit, key=lambda n: distances.get(n, 999999)) \n",
+        "    nodes_to_visit.remove(u)\n",
+        "    if u == goal:\n",
+        "      break\n",
+        "    for v in neighbors(u):\n",
+        "      if v in nodes_to_visit:\n",
+        "        dist_update(u, v, distances, predecessors)\n",
+        "\n",
+        "  return distances[goal]\n",
+        "\n",
+        "lines = [line.strip() for line in open('drive/MyDrive/AoC/2021/input15.txt')]\n",
+        "h = len(lines)\n",
+        "w = len(lines[0])\n",
+        "nodes = dict([((x, y), int(s))  for y, line in enumerate(lines) for x, s in enumerate(line)])\n",
+        "\n",
+        "print('part 1:', dijkstra_dist(nodes, w, h, 1, (w-1, h-1)))\n",
+        "\n",
+        "### THIS IS REALLY SLOW - TAKES 2hrs FOR THE 250000 NODES OF PART 2 ### \n",
+        "#print('part 2:', dijkstra_dist(nodes, w, h, 5, (5*w-1, 5*h-1)))\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TGOjiNgTI87s",
+        "outputId": "57ab4eb4-69bc-449a-9bbc-b1b9869471ec"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "10000\n",
+            "9000\n",
+            "8000\n",
+            "7000\n",
+            "6000\n",
+            "5000\n",
+            "4000\n",
+            "3000\n",
+            "2000\n",
+            "1000\n",
+            "part 1: 523\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -1293,7 +1394,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyOSvWI0bjBGDOnVw6+xxbh4",
+      "authorship_tag": "ABX9TyPyXXyLOnTSG/+tyBN3aOLu",
       "include_colab_link": true
     },
     "kernelspec": {
