--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -1122,7 +1122,7 @@
         "id": "sALg6TtIw8l0",
         "outputId": "72e3abe7-083f-447d-ee23-b97580b6ad53"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1179,7 +1179,7 @@
         "id": "1DejvypDnsUn",
         "outputId": "86419915-616f-4460-a340-f5eb66e1c45a"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1270,7 +1270,7 @@
         "id": "ysLa_7VnGpDS",
         "outputId": "1de1bef3-d818-46f9-e9f5-d1982f9c21bb"
       },
-      "execution_count": 72,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1327,12 +1327,11 @@
         "    diff = dx + dy\n",
         "    return (nodes[(x-dx*w1, y-dy*w1)] + diff - 1) % 9 + 1\n",
         "\n",
-        "  def dist_update(u, v, dists, preds, m):\n",
+        "  def dist_update(u, v, dists, preds):\n",
         "    alt = dists.get(u) + risk(v)\n",
         "    if alt < dists.get(v, 999999):\n",
         "      dists[v] = alt\n",
         "      preds[v] = u\n",
-        "    m[0]  \n",
         "\n",
         "  while nodes_to_visit: # not empty\n",
         "    if (len(nodes_to_visit) % 1000 == 0):\n",
@@ -1364,9 +1363,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "TGOjiNgTI87s",
-        "outputId": "57ab4eb4-69bc-449a-9bbc-b1b9869471ec"
+        "outputId": "8526fdf2-f1df-48ca-9c9e-aa406696c11e"
       },
-      "execution_count": 4,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -1394,7 +1393,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyPyXXyLOnTSG/+tyBN3aOLu",
+      "authorship_tag": "ABX9TyMKqY2A32e8FxorTXaNu6GP",
       "include_colab_link": true
     },
     "kernelspec": {
