--- a/2021/aoc2021.ipynb
+++ b/2021/aoc2021.ipynb
@@ -160,18 +160,18 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "JjAW85etNptr",
-        "outputId": "45c94949-74b6-4677-8892-0a6f4c5eb603"
+        "outputId": "816af42e-ce9b-42b5-f94c-13268894e744"
       },
       "outputs": [
         {
+          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "4138664"
             ]
           },
-          "execution_count": 6,
           "metadata": {},
-          "output_type": "execute_result"
+          "execution_count": 2
         }
       ],
       "source": [
@@ -185,8 +185,8 @@
         "initial_bit_count1s = [0] * len(ms[0])\n",
         "count1s = reduce(lambda cnt1s, m: [cnt1s[i] + int(m[i]) for i, x in enumerate(cnt1s)], ms, initial_bit_count1s)\n",
         "\n",
-        "most_common_bitvals = \"\".join(['1' if c > half else '0' for c in count1s])\n",
-        "least_common_bitvals = \"\".join(['1' if c < half else '0' for c in count1s])  # could also invert most_common_bitvals\n",
+        "most_common_bitvals = \"\".join('1' if c > half else '0' for c in count1s)\n",
+        "least_common_bitvals = \"\".join('1' if c < half else '0' for c in count1s)  # could also invert most_common_bitvals\n",
         "\n",
         "int(most_common_bitvals, 2) * int(least_common_bitvals, 2)"
       ]
@@ -576,7 +576,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VSIcdkV88Z3A",
-        "outputId": "57746d41-ec9b-40a1-ab95-0fcf695a5f70"
+        "outputId": "b61110db-fd53-4e73-e2b0-0285a5723301"
       },
       "outputs": [
         {
@@ -634,10 +634,10 @@
         "  # some utilities \n",
         "\n",
         "  def s_diff(s1:str, s2:str) -> str:\n",
-        "    return \"\".join([c for c in s1 if c not in s2])  \n",
+        "    return \"\".join(c for c in s1 if c not in s2)  \n",
         "\n",
         "  def s_inter(s1:str, s2:str) -> str:\n",
-        "    return \"\".join([c for c in s1 if c in s2])\n",
+        "    return \"\".join(c for c in s1 if c in s2)\n",
         "\n",
         "  def s_union(s1:str, s2:str) -> str:\n",
         "    return \"\".join(set(s1+s2))\n",
@@ -681,7 +681,7 @@
         "\n",
         "# apply mapping to output to get correct segment codes\n",
         "def translate(output, mapping):\n",
-        "  return \"\".join([mapping[o] for o in output])\n",
+        "  return \"\".join(mapping[o] for o in output)\n",
         "\n",
         "# sort letters in a string (needed for looking up digits by segments string)\n",
         "def s_sort(s:str) -> str:\n",
@@ -958,7 +958,7 @@
         "\n",
         "def p():\n",
         "  for row in grid:\n",
-        "    print(\"\".join([str(x) for x in row]))\n",
+        "    print(\"\".join(str(x) for x in row))\n",
         "\n",
         "# returns number of flashes in step\n",
         "def step():\n",
@@ -1020,7 +1020,7 @@
         "\n",
         "def p(grid):\n",
         "  for row in grid:\n",
-        "    print(\"\".join([str(e) for e in row]))\n",
+        "    print(\"\".join(str(e) for e in row))\n",
         "\n",
         "# TODO Something does not match the (working) non-functional approach above. Too many flashes in part 1, endless iteration in part 2.\n",
         "\n",
@@ -1165,7 +1165,7 @@
         "  code_size = reduce(lambda m, dot: (max(dot[0], m[0]), max(dot[1], m[1])), code, (0, 0))\n",
         "  print(\"code size:\", code_size)\n",
         "  for y in range(0, code_size[1]+1):\n",
-        "    print(\"\".join(['#' if (x, y) in code else ' ' for x in range(0, code_size[0]+1)]))\n",
+        "    print(\"\".join('#' if (x, y) in code else ' ' for x in range(0, code_size[0]+1)))\n",
         "\n",
         "code = reduce(fold, folds, dots)\n",
         "\n",
@@ -1177,7 +1177,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "1DejvypDnsUn",
-        "outputId": "86419915-616f-4460-a340-f5eb66e1c45a"
+        "outputId": "d7731826-9d1f-452a-b3c8-7aaf848ba209"
       },
       "execution_count": null,
       "outputs": [
@@ -1223,7 +1223,7 @@
         "\n",
         "# brute force\n",
         "def step(t):\n",
-        "  return t[0] + \"\".join([rules[t[i:i+2]] + t[i+1] for i in range(0, len(t)-1)])\n",
+        "  return t[0] + \"\".join(rules[t[i:i+2]] + t[i+1] for i in range(0, len(t)-1))\n",
         "\n",
         "res = reduce(lambda iter, i: step(iter), range(0, 10), template)\n",
         "# print(res)\n",
@@ -1365,7 +1365,7 @@
         "id": "TGOjiNgTI87s",
         "outputId": "8526fdf2-f1df-48ca-9c9e-aa406696c11e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1385,6 +1385,181 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "16) Intcode"
+      ],
+      "metadata": {
+        "id": "0GyFy5wR4pl0"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from itertools import takewhile\n",
+        "from functools import reduce\n",
+        "\n",
+        "# Tree\n",
+        "\n",
+        "# Added for part 2\n",
+        "\n",
+        "class Operation:\n",
+        "  def __init__(self, name, operation):\n",
+        "    self.name = name\n",
+        "    self.operation = operation\n",
+        "  def name(self):\n",
+        "    return self.name\n",
+        "  def evaluate(self, operands):\n",
+        "    return self.operation(operands)\n",
+        "  def __str__(self):\n",
+        "    return self.name\n",
+        "  __repr__ = __str__\n",
+        "\n",
+        "operations = [\n",
+        "  Operation('+', lambda operands: sum(o.evaluate() for o in operands)),\n",
+        "  Operation('*', lambda operands: reduce(lambda product, o: product * o.evaluate(), operands, 1)),\n",
+        "  Operation('min', lambda operands: min(o.evaluate() for o in operands)),\n",
+        "  Operation('max', lambda operands: max(o.evaluate() for o in operands)),\n",
+        "  None,  # literal\n",
+        "  Operation('>', lambda operands: 1 if operands[0].evaluate() > operands[1].evaluate() else 0),\n",
+        "  Operation('<', lambda operands: 1 if operands[0].evaluate() < operands[1].evaluate() else 0),\n",
+        "  Operation('==', lambda operands: 1 if operands[0].evaluate() == operands[1].evaluate() else 0)\n",
+        "]\n",
+        "\n",
+        "# End added for part 2\n",
+        "\n",
+        "class Literal:\n",
+        "  def __init__(self, version, val):\n",
+        "    self.version = version\n",
+        "    self.val = val\n",
+        "  def evaluate(self):\n",
+        "    return self.val\n",
+        "  def sum_version(self):\n",
+        "    return self.version\n",
+        "  def __str__(self):\n",
+        "    # return f'{self.val}[{self.version}]'  # part 1\n",
+        "    return f'{self.val}'  # part 2\n",
+        "  __repr__ = __str__\n",
+        "\n",
+        "class Operator:\n",
+        "  def __init__(self, version, type_id, operands):\n",
+        "    self.version = version\n",
+        "    self.type_id = type_id\n",
+        "    self.operands = operands\n",
+        "  def evaluate(self):\n",
+        "    # return None  # part 1 when type ids were not known\n",
+        "    return operations[self.type_id].evaluate(self.operands)\n",
+        "  def sum_version(self):\n",
+        "    return self.version + sum(o.sum_version() for o in self.operands)\n",
+        "  def __str__(self):\n",
+        "    # return f\"op[{self.version},{self.type_id}]({', '.join(str(o) for o in self.operands)})\"  # part 1 (type names not yet known)\n",
+        "    return f\"{operations[self.type_id]}({', '.join(str(o) for o in self.operands)})\"  # part 2\n",
+        "  __repr__ = __str__\n",
+        "\n",
+        "# Helpers\n",
+        "\n",
+        "# Read n bits as int, return rest\n",
+        "def read_bits(bin_input, n):\n",
+        "  return (int(bin_input[:n], 2), bin_input[n:])\n",
+        "\n",
+        "# Literal parsing: Lazy chunking of string into chunks of length n\n",
+        "# Yields pairs of chunk and rest\n",
+        "def chunked(string, chunk_len):\n",
+        "  rest = string\n",
+        "  while chunk_len <= len(rest):\n",
+        "    chunk = rest[:chunk_len]\n",
+        "    rest = rest[chunk_len:]\n",
+        "    yield (chunk, rest)\n",
+        "\n",
+        "# Literal parsing: Lazily take from an iterable until predicate is fulfilled by\n",
+        "# the next element (which is then yielded as last one)\n",
+        "def takeuntil(pred, iterable):\n",
+        "  i = iter(iterable)\n",
+        "  n = next(i)\n",
+        "  while not pred(n):\n",
+        "    yield n\n",
+        "    n = next(i)\n",
+        "  yield n\n",
+        "\n",
+        "# Literal parsing: Checks if a digit chunk is the last (first bit == 0)\n",
+        "# Input is a tuple (digit chunk, parsing rest), so it can be used with takeuntil\n",
+        "# on a sequence produced by chunked\n",
+        "def is_last_digit(digit_rest) -> bool:\n",
+        "  digit, rest = digit_rest\n",
+        "  return digit[0] == '0'\n",
+        "\n",
+        "# Literal parsing, assembling the binary representation from chunks\n",
+        "# (literal, previous rest), (digit chunk, rest) -> (literal + digit part of chunk, rest)\n",
+        "def append_digit(lit_prev_rest, digit_rest):\n",
+        "  lit, _ = lit_prev_rest\n",
+        "  digit, rest = digit_rest\n",
+        "  return (lit + digit[1:len(digit)], rest)\n",
+        "\n",
+        "# Parsing = recursive assembly of a tree of Operations and Literals\n",
+        "\n",
+        "def parse_literal(version, bin_input):\n",
+        "  lit, rest = reduce(append_digit, takeuntil(is_last_digit, chunked(bin_input, 5)), ('', ''))\n",
+        "  return (Literal(version, int(lit, 2)), rest)\n",
+        "\n",
+        "def parse_op_len(version, type_id, bin_input):\n",
+        "  limit, rest = read_bits(bin_input, 15)\n",
+        "  packets, sub_rest = parse_packets(rest[:limit])\n",
+        "  assert sub_rest == ''\n",
+        "  return (Operator(version, type_id, packets), rest[limit:])\n",
+        "\n",
+        "def parse_op_num(version, type_id, bin_input):\n",
+        "  limit, rest = read_bits(bin_input, 11)\n",
+        "  packets, rest = parse_packets(rest, limit)\n",
+        "  return (Operator(version, type_id, packets), rest)\n",
+        "\n",
+        "def parse_packets(bin_input, packet_limit=0):\n",
+        "  packets = []\n",
+        "  rest = bin_input\n",
+        "  while len(rest) >= 11 and (packet_limit == 0 or len(packets) < packet_limit):\n",
+        "    version, rest = read_bits(rest, 3)\n",
+        "    type_id, rest = read_bits(rest, 3)\n",
+        "    if (type_id == 4):\n",
+        "      # literal\n",
+        "      lit, rest = parse_literal(version, rest)\n",
+        "      packets.append(lit)\n",
+        "    else: \n",
+        "      # operator\n",
+        "      len_type_id, rest = read_bits(rest, 1)\n",
+        "      op, rest = parse_op_len(version, type_id, rest) if len_type_id==0 else parse_op_num(version, type_id, rest)\n",
+        "      packets.append(op)\n",
+        "  return packets, rest\n",
+        "\n",
+        "hex_input = open('drive/MyDrive/AoC/2021/input16.txt').readline().strip()\n",
+        "# hex_input = '9C0141080250320F1802104A08'\n",
+        "\n",
+        "packets, rest = parse_packets(\"\".join(format(int(d, 16), '04b') for d in hex_input))\n",
+        "print(\"packets:\", packets)\n",
+        "print(\"rest:\", rest)\n",
+        "print(\"part 1, sum of packet versions:\", sum(p.sum_version() for p in packets))\n",
+        "print(\"part 2, evaluation of packets:\", [p.evaluate() for p in packets])\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "45WZNvhm4pXF",
+        "outputId": "32a80edb-2ef0-460d-ad9d-14d75ef18e17"
+      },
+      "execution_count": 63,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "packets: [+(*(843, ==(813368, 813368)), 53943, *(<(34819, 34819), 7549566), max(11, 680, 58649361, 1258420029, 3613), +(7856267009332), *(63406121605, >(176, 64705)), 242, 119, min(658), min(62875, 2582, 96), *(716, <(1831, 1)), *(24693, >(424545, 15)), +(2, 3), *(<(234, 668770), 103076), *(<(227, 227), 3988), *(<(+(4, 15, 3), +(15, 9, 9)), 38844), *(9), min(3563, 72, 1885, 824940, 1022465), 94, *(89, ==(+(4, 15, 2), +(10, 11, 12))), *(+(9, 14, 15), +(7, 10, 6), +(11, 15, 11)), *(>(+(4, 9, 8), +(8, 10, 14)), 10), *(11889, >(77, 2640)), *(>(66148276326, 127), 18970730068), max(13, 139, 46), 9761, *(<(+(2, 14, 3), +(9, 3, 2)), 158452), *(==(64, 203), 497), +(6, 49, 1002099, 689786, 3646), +(12656205, 57796478963, 12634253), *(162, 47, 19, 98, 142), 142, min(595628, 174, 22302, 777), 3099, max(12, 1521), *(255, 86), max(780128, 33621, 59805, 177), *(<(8964053, 9), 359815), 42673, +(*(9, 10, 10), *(9, 4, 4), *(15, 13, 2)), max(+(max(*(max(min(min(min(*(max(max(+(max(min(max(min(+(+(*(*(30)))))))))))))))))))), min(4291448979, 3947), *(38, 99, 89), 3095, *(5, <(239, 3570)), max(786945), +(56542, 14, 8, 11173548), *(113, >(114, 114)), *(35368, >(4, 4)), *(13491, >(+(5, 15, 14), +(13, 5, 8))), 2222, *(104, ==(2954, 124)), *(108, 17, 227, 202))]\n",
+            "rest: 0\n",
+            "part 1, sum of packet versions: 989\n",
+            "part 2, evaluation of packets: [7936430475134]\n"
+          ]
+        }
+      ]
     }
   ],
   "metadata": {
@@ -1393,7 +1568,7 @@
       "name": "aoc2021.ipynb",
       "provenance": [],
       "mount_file_id": "1FGdyCsJksgRUjJ2DGdIN2rsgNKFsWZxp",
-      "authorship_tag": "ABX9TyMKqY2A32e8FxorTXaNu6GP",
+      "authorship_tag": "ABX9TyNvqouvBxv3Ps/pPy1eAN0f",
       "include_colab_link": true
     },
     "kernelspec": {
